use of HttpClient api