@@ -1,18 +1,22 @@
 import javax.net.ssl.*;
 import java.io.*;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
+import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class Setup implements X509TrustManager, HostnameVerifier {
+public class Setup extends ProxySelector implements X509TrustManager, HostnameVerifier {
     private static class JarDependency {
 
         private final String url;
@@ -39,6 +43,9 @@ public class Setup implements X509TrustManager, HostnameVerifier {
     private static String httpProxy = getEnv("http_proxy").orElse("");
     private static String noProxy = getEnv("no_proxy").orElse("").replaceAll(",", "|");
 
+    private static Proxy proxy = Proxy.NO_PROXY;
+    private static HttpClient client = null;
+
     private static boolean isWindowsOs() {
         String os = System.getProperty("os.name").toLowerCase();
         return os.startsWith("windows");
@@ -50,7 +57,7 @@ public class Setup implements X509TrustManager, HostnameVerifier {
         }
         final Pattern pattern = Pattern.compile("(https?|socks5?):\\/\\/([^:].+)", Pattern.CASE_INSENSITIVE);
         final Matcher m = pattern.matcher(proxy);
-        if(m.matches()) {
+        if (m.matches()) {
             protocol = m.group(1).toLowerCase();
             final String hostAndPortWithMaybeCredentials = m.group(2);
             if (hostAndPortWithMaybeCredentials.contains("@")) {
@@ -60,18 +67,17 @@ public class Setup implements X509TrustManager, HostnameVerifier {
                 password = credentials[1];
                 final String[] hostAndPort = hostAndPortWithCredentials[1].split(":");
                 host = hostAndPort[0];
-                if(hostAndPort.length > 1) {
+                if (hostAndPort.length > 1) {
                     port = Integer.parseInt(hostAndPort[1]);
                 }
             } else {
                 final String[] hostAndPort = hostAndPortWithMaybeCredentials.split(":");
                 host = hostAndPort[0];
-                if(hostAndPort.length > 1) {
+                if (hostAndPort.length > 1) {
                     port = Integer.parseInt(hostAndPort[1]);
                 }
             }
-        }
-        else {
+        } else {
             throw new IllegalArgumentException("Invalid proxy format: " + proxy);
         }
     }
@@ -79,36 +85,20 @@ public class Setup implements X509TrustManager, HostnameVerifier {
 
     private static void setJavaProxy() {
         if (host != null) {
-            if(protocol.startsWith("socks")){
-                if(port == 0) {
+            if (port == 0) {
+                if (protocol.equals("https")) {
+                    port = 443;
+                } else if (protocol.startsWith("socks")) {
                     port = 1080;
-                }
-                System.setProperty("socksProxyHost", host);
-                System.setProperty("socksProxyPort", String.valueOf(port));
-                if(username != null) {
-                    System.setProperty("java.net.socks.username", username);
-                }
-                if(password != null) {
-                    System.setProperty("java.net.socks.password", password);
-                }
-            } else {
-                if(port == 0) {
-                    if(protocol.equals("https")){
-                        port = 443;
-                    } else {
-                        port = 80;
-                    }
-                }
-                protocol = "https";
-                System.setProperty(protocol + ".proxyHost", host);
-                System.setProperty(protocol + ".proxyPort", String.valueOf(port));
-                if (username != null) {
-                    System.setProperty(protocol + ".proxyUser", username);
-                }
-                if (password != null) {
-                    System.setProperty(protocol + ".proxyPassword", password);
+                } else {
+                    port = 80;
                 }
             }
+            Proxy.Type proxyType = Proxy.Type.HTTP;
+            if(protocol.startsWith("socks")){
+                proxyType = Proxy.Type.SOCKS;
+            }
+            proxy = new Proxy(proxyType, new InetSocketAddress(host, port));
         }
     }
 
@@ -170,7 +160,7 @@ public class Setup implements X509TrustManager, HostnameVerifier {
                     SPARK_BQ_VERSION + "/" +
                     "spark-bigquery-with-dependencies_" + SCALA_VERSION + "-" + SPARK_BQ_VERSION + ".jar");
     private static final JarDependency DELTA_SPARK_JAR = new JarDependency("delta-spark",
-            "https://repo1.maven.org/maven2/io/delta/delta-spark_"+SCALA_VERSION+"/"+DELTA_SPARK+"/delta-spark_"+SCALA_VERSION+"-"+DELTA_SPARK+".jar");
+            "https://repo1.maven.org/maven2/io/delta/delta-spark_" + SCALA_VERSION + "/" + DELTA_SPARK + "/delta-spark_" + SCALA_VERSION + "-" + DELTA_SPARK + ".jar");
     private static final JarDependency HADOOP_AZURE_JAR = new JarDependency("hadoop-azure", "https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-azure/" + HADOOP_AZURE_VERSION + "/hadoop-azure-" + HADOOP_AZURE_VERSION + ".jar");
     private static final JarDependency AZURE_STORAGE_JAR = new JarDependency("azure-storage", "https://repo1.maven.org/maven2/com/microsoft/azure/azure-storage/" + AZURE_STORAGE_VERSION + "/azure-storage-" + AZURE_STORAGE_VERSION + ".jar");
     private static final JarDependency JETTY_SERVER_JAR = new JarDependency("jetty-server", "https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-server/" + JETTY_VERSION + "/jetty-server-" + JETTY_VERSION + ".jar");
@@ -328,16 +318,29 @@ public class Setup implements X509TrustManager, HostnameVerifier {
         return true;
     }
 
+    @Override
+    public List<Proxy> select(URI uri) {
+        return Collections.singletonList(proxy);
+    }
+
+    @Override
+    public void connectFailed(URI uri, SocketAddress sa, IOException ioe) {
+        throw new RuntimeException("Failed to connect to " + uri + " using proxy " + sa);
+    }
+
     private static final Setup instance = new Setup();
+
     private static final TrustManager alwaysTrustManager = instance;
 
     private static final HostnameVerifier allHostsValid = instance;
 
+    private static final ProxySelector proxySelector = instance;
+
     public static void setTrustManager(boolean insecure) throws NoSuchAlgorithmException, KeyManagementException {
-        if(host != null && insecure) {
+        if (host != null && insecure) {
             System.out.println("Enabling insecure mode for SSL connections using proxy " + protocol + "://" + host + ":" + port);
             // Create a trust manager that does not validate certificate chains
-            TrustManager[] trustAllCerts = new TrustManager[] {alwaysTrustManager};
+            TrustManager[] trustAllCerts = new TrustManager[]{alwaysTrustManager};
 
             // Install the all-trusting trust manager
             SSLContext sc = SSLContext.getInstance("SSL");
@@ -347,6 +350,24 @@ public class Setup implements X509TrustManager, HostnameVerifier {
             // Install the all-trusting host verifier
             HttpsURLConnection.setDefaultHostnameVerifier(allHostsValid);
         }
+    }
+
+    private static void setClient() {
+        HttpClient.Builder clientBuilder = HttpClient.newBuilder();
+        clientBuilder.proxy(proxySelector);
+        if (username != null) {
+            if (password == null) {
+                password = "";
+            }
+            Authenticator authenticator = new Authenticator() {
+                @Override
+                protected PasswordAuthentication getPasswordAuthentication() {
+                    return new PasswordAuthentication(username, password.toCharArray());
+                }
+            };
+            clientBuilder.authenticator(authenticator);
+        }
+        client = clientBuilder.build();
     }
 
     public static void main(String[] args) throws IOException {
@@ -366,6 +387,8 @@ public class Setup implements X509TrustManager, HostnameVerifier {
             setProxy();
 
             setTrustManager(getEnv("SL_INSECURE").orElse("false").equalsIgnoreCase("true"));
+
+            setClient();
 
             if (!anyDependencyEnabled()) {
                 ENABLE_AZURE = true;
@@ -427,7 +450,7 @@ public class Setup implements X509TrustManager, HostnameVerifier {
         }
     }
 
-    public static void downloadSpark(File binDir) throws IOException {
+    public static void downloadSpark(File binDir) throws IOException, InterruptedException {
         downloadAndDisplayProgress(new JarDependency[]{SPARK_JAR}, binDir, false);
         String tgzName = SPARK_JAR.getUrlName();
         final File sparkFile = new File(binDir, tgzName);
@@ -447,7 +470,7 @@ public class Setup implements X509TrustManager, HostnameVerifier {
         log4j2File.renameTo(new File(sparkDir, "conf/log4j2.properties"));
     }
 
-    private static void downloadAndDisplayProgress(JarDependency[] dependencies, File targetDir, boolean replaceJar) throws IOException {
+    private static void downloadAndDisplayProgress(JarDependency[] dependencies, File targetDir, boolean replaceJar) throws IOException, InterruptedException {
         if (!targetDir.exists()) {
             targetDir.mkdirs();
         }
@@ -481,17 +504,18 @@ public class Setup implements X509TrustManager, HostnameVerifier {
         }
     }
 
-    private static void downloadAndDisplayProgress(String urlStr, String file) throws IOException {
+    private static void downloadAndDisplayProgress(String urlStr, String file) throws IOException, InterruptedException {
         final int CHUNK_SIZE = 1024;
         int filePartIndex = urlStr.lastIndexOf("/") + 1;
         String name = urlStr.substring(filePartIndex);
         String urlFolder = urlStr.substring(0, filePartIndex);
         System.out.println("Downloading to " + file + " from " + urlFolder + " ...");
-        URL url = new URL(urlStr);
-        URLConnection conexion = url.openConnection();
-        conexion.connect();
-        int lengthOfFile = conexion.getContentLength();
-        InputStream input = new BufferedInputStream(url.openStream());
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(urlStr))
+                .build();
+        HttpResponse<InputStream> response = client.send(request, HttpResponse.BodyHandlers.ofInputStream());
+        long lengthOfFile = response.headers().firstValueAsLong("Content-Length").orElse(0L);
+        InputStream input = new BufferedInputStream(response.body());
         OutputStream output = new FileOutputStream(file);
         byte data[] = new byte[CHUNK_SIZE];
         long total = 0;
@@ -507,7 +531,7 @@ public class Setup implements X509TrustManager, HostnameVerifier {
                 StringBuilder sb = new StringBuilder("Progress: " + (total / 1024 / 1024) + "/" + (lengthOfFile / 1024 / 1024) + " MB");
                 if (lengthOfFile > 0) {
                     sb.append(" (");
-                    sb.append((int) (total * 100 / lengthOfFile));
+                    sb.append((total * 100 / lengthOfFile));
                     sb.append("%)");
                 }
                 long currentTime = System.currentTimeMillis();
